fix: upload collection overflow [ci visual]
BREAKING CHANGE:
* upload collection item object status now needs additional classes to be applied

--- a/src/styles/upload-collection.scss
+++ b/src/styles/upload-collection.scss
@@ -35,6 +35,7 @@ $fd-upload-collection-button-group-small-margin: 0.5rem !default;
       @include fd-set-margin-right($fd-upload-collection-button-group-small-margin);
 
       flex: none;
+      flex-shrink: 1;
     }
   }
 
@@ -53,8 +54,25 @@ $fd-upload-collection-button-group-small-margin: 0.5rem !default;
     padding-top: 0.625rem;
   }
 
-  &__status-group {
+  .#{$block}__status-group {
+    @include fd-flex();
+
     margin-top: $fd-upload-collection-side-margin;
+
+    &-item {
+      @include fd-set-margins-x-equal(0.25rem);
+
+      flex-shrink: 1;
+      min-width: 0;
+
+      &:first-child {
+        @include fd-set-margins-x(0, 0.25rem);
+      }
+
+      &-text {
+        @include fd-ellipsis();
+      }
+    }
   }
 
   &__extension {
